2009-02-22  Gian Mario Tagliaretti  <gianmt@gnome.org>

	Bug 309180 – gtk.MessageDialog exposes private attributes

	* gtk/gtk.override: add deprecation warnings using private attributes.

2009-02-22  Gian Mario Tagliaretti  <gianmt@gnome.org>

	Bug 447388 – pixbuf.get_pixels_array() doesn't correctly flag the array
	as non-contiguous
	
	gtk/gdkpixbuf.override: Fix the rowstride for pixbuf with padded rows.
	Patch from Tim Evans

2009-02-20  James Henstridge  <james@jamesh.id.au>

	* ltihooks.py: relicense file from GPL to LGPL 2.1 for benefit of
	pygst.  Not sure why I used a GPL header to start with.

2009-02-15  Gian Mario Tagliaretti  <gianmt@gnome.org>

	gtk/gtk-base.defs: Fix a small typo.

2009-02-15  Gian Mario Tagliaretti  <gianmt@gnome.org>

	gtk/gtk-base.defs: Add deprecation warnings to the old gtk.Tooltips

2009-02-01  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* gtk/gtktextview.override
	(_wrap_gtk_text_buffer_register_deserialize_format): Return the
	deserialized string as a new memory buffer.  Closes #567747.
	(_wrap_gtk_text_buffer_serialize): We must free the original
	deserialized string buffer (caller owns return).

2009-01-31  Gian Mario Tagliaretti  <gianmt@gnome.org>

	NEWS: update to reflect 2.14 branch

2009-01-30  Gian Mario Tagliaretti  <gianmt@gnome.org>

	Bug 563717 – GNOME Goal: Clean up GLib and GTK+ includes

	gtk/gtk.override:
	gtk/gtkunixprint.override:
	gtk/pygtktreemodel.h:
	gtk/gtkunixprintmodule.c:
	gtk/pygtkcellrenderer.h: Clean up GLib and GTK+ includes,
	patch from Przemysław Grzegorczyk.

2009-01-28  Gian Mario Tagliaretti  <gianmt@gnome.org>

	Bug 566493 – gtk_accel_groups_activate is not available

	* gtk.override: clean up ignore section which contains lots of methods
	that don't exist while closing the bug by removing
	(gtk_accel_groups_activate) from ignore.

=== PyGTK 2.14.0 ===
2009-01-28  Gian Mario Tagliaretti  <gianmt@gnome.org>

	Bug 556130 – bogus override of python includes in configure.ac
