@@ -1,5 +1,13 @@
 2009-02-22  Gian Mario Tagliaretti  <gianmt@gnome.org>
 
+	Bug 311008 – pygtk-demo fixes
+	
+	* examples/pygtk-demo/pygtk-demo.py: Apply a patch from Andi Albrecht.
+	
+	* examples/pygtk-demo/demos/pixbufs.py: Remove deprecation Warnings.
+
+2009-02-22  Gian Mario Tagliaretti  <gianmt@gnome.org>
+
 	Bug 309180 – gtk.MessageDialog exposes private attributes
 
 	* gtk/gtk.override: add deprecation warnings using private attributes.
